package interpreter;

class Context {
    private String language;

    public Context(String language) {
        this.language = language;
    }

    public String getLanguage() {
        return language;
    }
}
