package interpreter;

class NonterminalExpression {
    private String expression;

    public NonterminalExpression(String expression) {
        this.expression = expression;
    }

    public String interpret(Context context) {
        // Implementation of interpretation logic for nonterminal expressions
        // Example: Translate a complex expression based on context
        return "Translation of complex expression: " + expression;
    }
}
